--- a/sample bello/sample1/sample.css
+++ b/sample bello/sample1/sample.css
@@ -9,9 +9,42 @@ h1{
     color:white;
     background-color:black
 }
-button{
-    text-align: right;
+button {
+    float: right;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #1c86b8;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 5 px;
+    padding: 5px;
+    width: 100px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 1px;
+  }
+button span{
+    cursor: pointer;
+    display:inline-block;
+    position: relative;
+    transition: 0.5s;
 }
+button span:after {
+    content: '\00bb';
+    position: relative;
+    opacity: 0;
+    top: 0;
+    right: -5px;
+    transition: 0.5s;
+  }
+button:hover span {
+    padding-right: 5px;
+  }
+button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
 img.break{
     float:right;
     border-radius:100%;
@@ -21,3 +54,30 @@ img.break{
 img{
     width: 600px;
 }
+h3{
+    color:white;
+    background-color:black;
+    display:inline-block;
+    border-radius:10px
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: right;
+    width: 180px;
+    border-color: #1c86b8;
+  }
+  
+div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+div.desc {
+    padding: 15px;
+    text-align: center;
+  }
