improving css sheets

--- a/sample bello/sample1/sample.css
+++ b/sample bello/sample1/sample.css
@@ -58,7 +58,7 @@ h3{
     color:white;
     background-color:black;
     display:inline-block;
-    border-radius:10px
+    border-radius:2px
 }
 div.gallery {
     margin: 5px;
@@ -80,4 +80,38 @@ div.gallery img {
 div.desc {
     padding: 15px;
     text-align: center;
+  }
+ 
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+li {
+    text-align: center;
+    border-bottom: 1px solid #555;
+  }
+  
+li:last-child {
+    border-bottom: none;
+  }
+  
+ li a.active {
+    background-color: #21abce;
+    color: white;
+  }
+  
+ li a:hover:not(.active) {
+    background-color: #3d7fd6;
+    color: white;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    border: 1px solid #1697ca;
   }
