--- a/sample bello/sample1/page2.css
+++ b/sample bello/sample1/page2.css
@@ -12,7 +12,7 @@ padding-right:5px;
 display:inline-block;
 border-radius:60px
 }
-p{
+li{
     text-align: justify;
     margin: 0 auto;
     width: 30em;
